// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDetailsTimeline renders correctly (with a mocked Timeline component) 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-8 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Timeline
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="woocommerce-timeline"
        >
          <ul>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                April 4, 2020
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Disputed: Lost
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:56pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-cross is-error"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                          />
                        </g>
                      </svg>
                      <span>
                        <strong>
                          Dispute lost.
                        </strong>
                         Your customer's bank reviewed the evidence and decided in the customer's favor.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:56pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Disputed: Won
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      12:20pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-plus"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M21 13h-8v8h-2v-8H3v-2h8V3h2v8h8v2z"
                          />
                        </g>
                      </svg>
                      <span>
                        $115.00 was added to your 
                        <a
                          data-link-type="wc-admin"
                          href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=dummy_po_5eaada696b2d3"
                        >
                          Apr 5, 2020 payout
                        </a>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      12:20pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  >
                    <span>
                      Dispute reversal: $100.00
                    </span>
                    <span>
                      Fee refund: $15.00
                    </span>
                  </div>
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-notice-outline is-success"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Dispute won! The bank ruled in your favor.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      12:20pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Refunded
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      9:51am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-minus"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M3 11h18v2H3z"
                          />
                        </g>
                      </svg>
                      <span>
                        $100.00 will be deducted from a future payout.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      9:51am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-success"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $100.00 was successfully refunded.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      9:51am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  >
                    <span />
                    <span />
                  </div>
                </li>
              </ul>
              <hr />
            </li>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                April 3, 2020
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Partial refund
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      2:58pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-minus"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M3 11h18v2H3z"
                          />
                        </g>
                      </svg>
                      <span>
                        $50.00 will be deducted from a future payout.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      2:58pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-success"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $50.00 was successfully refunded.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      2:58pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  >
                    <span />
                    <span />
                  </div>
                </li>
              </ul>
              <hr />
            </li>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                April 2, 2020
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Disputed: In review
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      4:26pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-success"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        Challenge evidence submitted.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      4:26pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
              </ul>
              <hr />
            </li>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                April 1, 2020
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Disputed: Needs response
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:06pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-minus"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M3 11h18v2H3z"
                          />
                        </g>
                      </svg>
                      <span>
                        $110.00 will be deducted from a future payout.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:06pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  >
                    <span>
                      Disputed amount: $95.00
                    </span>
                    <span />
                    <span>
                      Fee: $15.00
                    </span>
                  </div>
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-cross is-error"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment disputed as Transaction unauthorized.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:06pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Paid
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:37am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-plus"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M21 13h-8v8h-2v-8H3v-2h8V3h2v8h8v2z"
                          />
                        </g>
                      </svg>
                      <span>
                        $59.50 was added to your 
                        <a
                          data-link-type="wc-admin"
                          href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=dummy_po_5eaada696b281"
                        >
                          Apr 2, 2020 payout
                        </a>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:37am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-success"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $63.00 was successfully charged.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      10:37am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  >
                    <span>
                      Fee: $3.50
                    </span>
                    <span>
                      Net payout: $59.50
                    </span>
                  </div>
                </li>
              </ul>
              <hr />
            </li>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                March 31, 2020
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Failed
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      11:35pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-cross is-error"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $77.00 failed: The card was declined by the bank.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      11:35pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Authorization expired
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      5:58pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-cross is-error"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M18.36 19.78L12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z"
                          />
                        </g>
                      </svg>
                      <span>
                        Authorization for $86.00 expired.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      5:58pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Authorization voided
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      6:57am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-warning"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        Authorization for $59.00 was voided.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      6:57am
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
              </ul>
              <hr />
            </li>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                March 30, 2020
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Authorized
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      1:33pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-warning"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $79.00 was successfully authorized.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      1:33pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
              </ul>
              <hr />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders error 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-8 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Timeline
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Error while loading timeline
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders loading 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-8 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        <span
          aria-busy="true"
          class="is-loadable-placeholder"
        >
          Timeline
        </span>
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 3;"
          >
            Block placeholder
          </p>
        </span>
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 3;"
          >
            Block placeholder
          </p>
        </span>
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 3;"
          >
            Block placeholder
          </p>
        </span>
        <span
          aria-busy="true"
          class="is-loadable-placeholder is-block"
        >
          <p
            style="line-height: 3;"
          >
            Block placeholder
          </p>
        </span>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders subscription fee correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-8 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Timeline
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="woocommerce-timeline"
        >
          <ul>
            <li
              class="woocommerce-timeline-group"
            >
              <p
                class="woocommerce-timeline-group__title"
              >
                October 4, 2021
              </p>
              <ul>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Paid
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      3:18pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-plus"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M21 13h-8v8h-2v-8H3v-2h8V3h2v8h8v2z"
                          />
                        </g>
                      </svg>
                      <span>
                        $0.66 will be added to a future payout.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      3:18pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-success"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $1.00 was successfully charged.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      3:18pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  >
                    <span>
                      Fee (3.9% + $0.30): -$0.34
                    </span>
                    <span>
                      <ul
                        class="fee-breakdown-list"
                      >
                         
                        <li>
                          Base fee: 2.9% + $0.30
                        </li>
                        <li>
                          Subscription transaction fee: 1%
                        </li>
                         
                      </ul>
                    </span>
                    <span>
                      Net payout: $0.66
                    </span>
                  </div>
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-sync"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M23.5 13.5l-3.086 3.086L19 18l-4.5-4.5 1.414-1.414L18 14.172V12c0-3.308-2.692-6-6-6V4a8 8 0 018 8v2.172l2.086-2.086L23.5 13.5zM6 12V9.828l2.086 2.086L9.5 10.5 5 6 3.586 7.414.5 10.5l1.414 1.414L4 9.828V12a8 8 0 008 8v-2c-3.308 0-6-2.692-6-6z"
                          />
                        </g>
                      </svg>
                      <span>
                        Payment status changed to 
                        <strong>
                          Authorized
                        </strong>
                        .
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      3:18pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
                <li
                  class="woocommerce-timeline-item"
                >
                  <div
                    class="woocommerce-timeline-item__top-border"
                  />
                  <div
                    class="woocommerce-timeline-item__title"
                  >
                    <div
                      class="woocommerce-timeline-item__headline"
                    >
                      <svg
                        class="gridicon gridicons-checkmark is-warning"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M9 19.414l-6.707-6.707 1.414-1.414L9 16.586 20.293 5.293l1.414 1.414z"
                          />
                        </g>
                      </svg>
                      <span>
                        A payment of $1.00 was successfully authorized.
                      </span>
                    </div>
                    <span
                      class="woocommerce-timeline-item__timestamp"
                    >
                      3:18pm
                    </span>
                  </div>
                  <div
                    class="woocommerce-timeline-item__body"
                  />
                </li>
              </ul>
              <hr />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
